clean architecture packages and added use cases for business rule encapsulation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.Restaurants"
         tools:targetApi="31">
         <activity
-            android:name="com.example.restaurants.MainActivity"
+            android:name="com.example.restaurants.restaurant.presentation.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Restaurants">
             <intent-filter>
